hphp/hack/test/typecheck/array_append_dict_element_property_good.php.like_types.exp
File "array_append_dict_element_property_good.php", line 9, characters 3-25:
Invalid assignment (Typing[4110])
File "array_append_dict_element_property_good.php", line 5, characters 10-20:
Expected vec<~string>
File "array_append_dict_element_property_good.php", line 9, characters 14-15:
But got dynamic, the result of accessing a property of a dynamic type
